[gd_scene load_steps=2 format=3 uid="uid://bx1wovv0p182j"]

[ext_resource type="Script" path="res://map/map.gd" id="2_gsif4"]

[node name="map" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_gsif4")

[node name="start" type="Button" parent="."]
offset_left = 555.0
offset_top = 2.0
offset_right = 576.0
offset_bottom = 22.0
text = "start"

[node name="battle" type="Button" parent="."]
offset_left = 556.0
offset_top = 85.0
offset_right = 577.0
offset_bottom = 105.0
text = "battle"

[node name="campfire" type="Button" parent="."]
offset_left = 555.0
offset_top = 209.0
offset_right = 576.0
offset_bottom = 229.0
text = "camp"

[node name="boss" type="Button" parent="."]
offset_left = 555.0
offset_top = 454.0
offset_right = 576.0
offset_bottom = 474.0
text = "boss"

[node name="quit" type="Button" parent="."]
offset_left = 939.0
offset_top = 12.0
offset_right = 981.0
offset_bottom = 43.0
text = "Quit"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="battle" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="campfire" to="." method="_on_campfire_pressed"]
[connection signal="pressed" from="boss" to="." method="_on_boss_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_boss_pressed"]
